// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BulkSelect should render correctly - no data 1`] = `
<Fragment>
  <Checkbox
    className="ins-c-bulk-select"
    id="undefined-checkbox"
    isChecked={false}
    isDisabled={false}
    isValid={true}
    onChange={[Function]}
    ouiaSafe={true}
  />
</Fragment>
`;

exports[`BulkSelect should render correctly - null checked 1`] = `
<Fragment>
  <Dropdown
    className="ins-c-bulk-select"
    dropdownItems={
      Array [
        <DropdownItem
          component="button"
          onClick={[Function]}
          ouiaId="OUIA-Generated-RHI/BulkSelect-4-0"
        >
          Select all
        </DropdownItem>,
      ]
    }
    isOpen={false}
    onSelect={[Function]}
    ouiaId="OUIA-Generated-RHI/BulkSelect-4"
    ouiaSafe={true}
    toggle={
      <DropdownToggle
        isDisabled={false}
        onToggle={[Function]}
        ouiaId="OUIA-Generated-RHI/BulkSelect-4-toggle"
        splitButtonItems={
          Array [
            <React.Fragment>
              <DropdownToggleCheckbox
                aria-label="Select all"
                className=""
                id="toggle-checkbox"
                isChecked={null}
                isDisabled={false}
                isValid={true}
                onChange={[Function]}
                ouiaId="OUIA-Generated-RHI/BulkSelect-4-toggle-checkbox"
              >
                
              </DropdownToggleCheckbox>
            </React.Fragment>,
          ]
        }
      />
    }
  />
</Fragment>
`;

exports[`BulkSelect should render correctly 1`] = `
<Fragment>
  <Dropdown
    className="ins-c-bulk-select"
    dropdownItems={
      Array [
        <DropdownItem
          className="ins-c-bulk-select__selected"
          isDisabled={true}
        >
          30
           Selected
        </DropdownItem>,
        <DropdownItem
          component="button"
          onClick={[Function]}
          ouiaId="OUIA-Generated-RHI/BulkSelect-2-0"
        >
          Select all
        </DropdownItem>,
      ]
    }
    isOpen={false}
    onSelect={[Function]}
    ouiaId="OUIA-Generated-RHI/BulkSelect-2"
    ouiaSafe={true}
    toggle={
      <DropdownToggle
        isDisabled={false}
        onToggle={[Function]}
        ouiaId="OUIA-Generated-RHI/BulkSelect-2-toggle"
        splitButtonItems={
          Array [
            <React.Fragment>
              <DropdownToggleCheckbox
                aria-label="Select all"
                className=""
                id="some-id-toggle-checkbox"
                isChecked={false}
                isDisabled={false}
                isValid={true}
                onChange={[Function]}
                ouiaId="OUIA-Generated-RHI/BulkSelect-2-toggle-checkbox"
              >
                30 selected
              </DropdownToggleCheckbox>
            </React.Fragment>,
          ]
        }
      />
    }
  />
</Fragment>
`;

exports[`BulkSelect should render correctly 2`] = `
<Fragment>
  <Dropdown
    className="ins-c-bulk-select"
    dropdownItems={
      Array [
        <DropdownItem
          component="button"
          onClick={[Function]}
          ouiaId="OUIA-Generated-RHI/BulkSelect-3-0"
        >
          Select all
        </DropdownItem>,
      ]
    }
    isOpen={false}
    onSelect={[Function]}
    ouiaId="OUIA-Generated-RHI/BulkSelect-3"
    ouiaSafe={true}
    toggle={
      <DropdownToggle
        isDisabled={false}
        onToggle={[Function]}
        ouiaId="OUIA-Generated-RHI/BulkSelect-3-toggle"
        splitButtonItems={
          Array [
            <React.Fragment>
              <DropdownToggleCheckbox
                aria-label="Select all"
                className=""
                id="toggle-checkbox"
                isChecked={false}
                isDisabled={false}
                isValid={true}
                onChange={[Function]}
                ouiaId="OUIA-Generated-RHI/BulkSelect-3-toggle-checkbox"
              >
                
              </DropdownToggleCheckbox>
            </React.Fragment>,
          ]
        }
      />
    }
  />
</Fragment>
`;

exports[`BulkSelect should render custom props 1`] = `
<Fragment>
  <Dropdown
    className="ins-c-bulk-select"
    dropdownItems={
      Array [
        <DropdownItem
          component="button"
          isDisabled={true}
          onClick={[Function]}
          ouiaId="OUIA-Generated-RHI/BulkSelect-5-0"
        >
          Select none
        </DropdownItem>,
        <DropdownItem
          component="button"
          onClick={[Function]}
          ouiaId="OUIA-Generated-RHI/BulkSelect-5-1"
        >
          Select all
        </DropdownItem>,
      ]
    }
    isOpen={false}
    onSelect={[Function]}
    ouiaId="OUIA-Generated-RHI/BulkSelect-5"
    ouiaSafe={true}
    toggle={
      <DropdownToggle
        isDisabled={false}
        onToggle={[Function]}
        ouiaId="OUIA-Generated-RHI/BulkSelect-5-toggle"
        splitButtonItems={
          Array [
            <React.Fragment>
              <DropdownToggleCheckbox
                aria-label="Select all"
                className=""
                id="toggle-checkbox"
                isChecked={false}
                isDisabled={false}
                isValid={true}
                onChange={[Function]}
                ouiaId="OUIA-Generated-RHI/BulkSelect-5-toggle-checkbox"
              >
                
              </DropdownToggleCheckbox>
            </React.Fragment>,
          ]
        }
      />
    }
  />
</Fragment>
`;
